--- a/kubernetes/apps/default/open-webui/app/helmrelease.yaml
+++ b/kubernetes/apps/default/open-webui/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               ENABLE_OAUTH_SIGNUP: "true"
               OLLAMA_BASE_URL: http://mac.internal:11434
               OAUTH_PROVIDER_NAME: "Pocket ID"
-              OAUTH_ALLOWED_DOMAINS: "goyangi.cloud"
+              # OAUTH_ALLOWED_DOMAINS: "goyangi.cloud"
               OPENID_PROVIDER_URL: "https://pid.goyangi.cloud/.well-known/openid-configuration"
               OPENID_REDIRECT_URI: "https://ai.goyangi.cloud/oauth/oidc/callback"
               PORT: &port 80
