--- a/kubernetes/apps/default/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/atuin/app/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
   values:
     controllers:
       atuin:
+        type: statefulset
         containers:
           app:
             image:
