--- a/kubernetes/flux/components/volsync/kustomization.yaml
+++ b/kubernetes/flux/components/volsync/kustomization.yaml
@@ -3,6 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
-  - ./nfs.yaml
+  - ./local
+  - ./remote
   - ./pvc.yaml
-  - ./r2.yaml
