--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -61,6 +61,7 @@ spec:
               TZ: Australia/Sydney
               GATUS_CONFIG_PATH: /config
               GATUS_DELAY_START_SECONDS: 5
+              GATUS_LOG_LEVEL: DEBUG
               WEB_PORT: &port 80
             envFrom: *envFrom
             probes:
