--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/homelab/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/homelab/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
       name: actions-runner-controller-secret
       valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_PRIVATE_KEY
   values:
-    githubConfigUrl: https://github.com/solanyn
+    githubConfigUrl: https://github.com/solanyn/homelab
     minRunners: 1
     maxRunners: 3
     containerMode:
