--- a/.github/workflows/label-sync.yaml
+++ b/.github/workflows/label-sync.yaml
@@ -18,10 +18,19 @@ jobs:
     name: Label Sync
     runs-on: ubuntu-latest
     steps:
+      - name: Generate Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: "${{ secrets.BOT_APP_ID }}"
+          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/labels.yaml
+          token: "${{ steps.app-token.outputs.token }}"
+          path: pull
 
       - name: Sync Labels
         uses: EndBug/label-sync@v2
