--- a/.github/workflows/label-sync.yaml
+++ b/.github/workflows/label-sync.yaml
@@ -32,6 +32,11 @@ jobs:
           token: "${{ steps.app-token.outputs.token }}"
           path: pull
 
+      - name: DEBUG
+        run: |
+          ls -la
+          ls -la .github
+
       - name: Sync Labels
         uses: EndBug/label-sync@v2
         with:
