--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -19,12 +19,15 @@ jobs:
         with:
           app-id: "${{ secrets.BOT_APP_ID }}"
           private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
-
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: .github/labeler.yaml
+          token: "${{ steps.app-token.outputs.token }}"
       - name: DEBUG
         run: |
           ls -la
           ls -la .github
-
       - name: Labeler
         uses: actions/labeler@v5
         with:
