--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -22,7 +22,7 @@ env:
 jobs:
   sync:
     name: Helm Repository Sync
-    runs-on: ["home-ops-runner"]
+    runs-on: ["homelab-runner"]
     steps:
       - name: Generate Token
         uses: actions/create-github-app-token@v1
