--- a/kubernetes/apps/database/mariadb/app/helmrelease.yaml
+++ b/kubernetes/apps/database/mariadb/app/helmrelease.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: mariadb
+  name: &app mariadb
 spec:
   interval: 30m
   chart:
@@ -21,6 +21,9 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    fullnameOverride: *app
+    crds:
+      enabled: true
     metrics:
       enabled: true
       serviceMonitor:
