--- a/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/apps/default/home-assistant/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - ../../../../flux/components/volsync
   dependsOn:
     - name: emqx-cluster
-      namespace: default
+      namespace: database
     - name: onepassword-store
       namespace: external-secrets
     - name: volsync
