--- a/kubernetes/apps/default/pocket-id/ks.yaml
+++ b/kubernetes/apps/default/pocket-id/ks.yaml
@@ -17,6 +17,8 @@ spec:
       namespace: external-secrets
     - name: volsync
       namespace: volsync-system
+    - name: cloudnative-pg-cluster
+      namespace: database
   interval: 30m
   path: ./kubernetes/apps/default/pocket-id/app
   postBuild:
