--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
@@ -29,38 +29,38 @@ spec:
       memory: 4Gi
   monitoring:
     enablePodMonitor: true
-  backup:
-    retentionPolicy: 14d
-    barmanObjectStore: &barmanObjectStore
-      data:
-        compression: bzip2
-      wal:
-        compression: bzip2
-        maxParallel: 8
-      destinationPath: s3://cloudnative-pg/
-      endpointURL: https://25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com
-      # Note: serverName version needs to be incremented
-      # when recovering from an existing cnpg cluster
-      serverName: &currentCluster postgres-v1
-      s3Credentials:
-        accessKeyId:
-          name: cloudnative-pg-secret
-          key: aws-access-key-id
-        secretAccessKey:
-          name: cloudnative-pg-secret
-          key: aws-secret-access-key
-  # NOTE: previousCluster needs to be set to the name of the previous
-  # cluster when recovering from an existing cnpg cluster
-  bootstrap:
-    # NOTE: Set initdb and comment out recovery when no backup (the very first bootstrap)!
-    # initdb:
-    #   database: postgres-v0
-    #   owner: postgres
-    recovery:
-      source: &previousCluster postgres16-v11
-  # NOTE: externalClusters is needed when recovering from an EXISTING cnpg cluster
-  externalClusters:
-    - name: *previousCluster
-      barmanObjectStore:
-        !!merge <<: *barmanObjectStore
-        serverName: *previousCluster
+  # backup:
+  #   retentionPolicy: 14d
+  #   barmanObjectStore: &barmanObjectStore
+  #     data:
+  #       compression: bzip2
+  #     wal:
+  #       compression: bzip2
+  #       maxParallel: 8
+  #     destinationPath: s3://cloudnative-pg/
+  #     endpointURL: https://25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com
+  #     # Note: serverName version needs to be incremented
+  #     # when recovering from an existing cnpg cluster
+  #     serverName: &currentCluster postgres-v1
+  #     s3Credentials:
+  #       accessKeyId:
+  #         name: cloudnative-pg-secret
+  #         key: aws-access-key-id
+  #       secretAccessKey:
+  #         name: cloudnative-pg-secret
+  #         key: aws-secret-access-key
+  # # NOTE: previousCluster needs to be set to the name of the previous
+  # # cluster when recovering from an existing cnpg cluster
+  # bootstrap:
+  #   # NOTE: Set initdb and comment out recovery when no backup (the very first bootstrap)!
+  #   # initdb:
+  #   #   database: postgres-v0
+  #   #   owner: postgres
+  #   recovery:
+  #     source: &previousCluster postgres16-v11
+  # # NOTE: externalClusters is needed when recovering from an EXISTING cnpg cluster
+  # externalClusters:
+  #   - name: *previousCluster
+  #     barmanObjectStore:
+  #       !!merge <<: *barmanObjectStore
+  #       serverName: *previousCluster
