--- a/kubernetes/apps/default/pocket-id/app/externalsecret.yaml
+++ b/kubernetes/apps/default/pocket-id/app/externalsecret.yaml
@@ -12,11 +12,11 @@ spec:
     template:
       data:
         INIT_POSTGRES_DBNAME: pocket_id
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres16-rw.database.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .POCKET_ID_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POCKET_ID_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        POSTGRES_CONNECTION_STRING: "postgres://{{.POCKET_ID_POSTGRES_USER}}:{{.POCKET_ID_POSTGRES_PASSWORD}}@postgres-rw.database.svc.cluster.local:5432/pocket_id?sslmode=disable"
+        POSTGRES_CONNECTION_STRING: "postgres://{{.POCKET_ID_POSTGRES_USER}}:{{.POCKET_ID_POSTGRES_PASSWORD}}@postgres16-rw.database.svc.cluster.local:5432/pocket_id?sslmode=disable"
   dataFrom:
     - extract:
         key: pocket-id
