--- a/kubernetes/apps/default/prowlarr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/prowlarr/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       data:
         PROWLARR__AUTH__APIKEY: "{{ .PROWLARR_API_KEY }}"
-        PROWLARR__POSTGRES__HOST: &dbHost postgres-rw.database.svc.cluster.local
+        PROWLARR__POSTGRES__HOST: &dbHost postgres16-rw.database.svc.cluster.local
         PROWLARR__POSTGRES__PORT: "5432"
         PROWLARR__POSTGRES__USER: &dbUser "{{ .PROWLARR_POSTGRES_USER }}"
         PROWLARR__POSTGRES__PASSWORD: &dbPass "{{ .PROWLARR_POSTGRES_PASSWORD }}"
