--- a/kubernetes/apps/default/readarr-ab/app/externalsecret.yaml
+++ b/kubernetes/apps/default/readarr-ab/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
             <PostgresUser>{{ .READARR_AB_POSTGRES_USER }}</PostgresUser>
             <PostgresPassword>{{ .READARR_AB_POSTGRES_PASSWORD }}</PostgresPassword>
             <PostgresPort>5432</PostgresPort>
-            <PostgresHost>postgres-rw.database.svc.cluster.local</PostgresHost>
+            <PostgresHost>postgres16-rw.database.svc.cluster.local</PostgresHost>
             <PostgresMainDb>readarr_ab_main</PostgresMainDb>
             <PostgresLogDb>readarr_ab_log</PostgresLogDb>
             <PostgresCacheDb>readarr_ab_cache</PostgresCacheDb>
@@ -32,7 +32,7 @@ spec:
           </Config>
         # App
         READARR__API_KEY: "{{ .READARR_AB_API_KEY }}"
-        READARR__POSTGRES_HOST: &dbHost postgres-rw.database.svc.cluster.local
+        READARR__POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
         READARR__POSTGRES_PORT: "5432"
         READARR__POSTGRES_USER: &dbUser "{{ .READARR_AB_POSTGRES_USER }}"
         READARR__POSTGRES_PASSWORD: &dbPass "{{ .READARR_AB_POSTGRES_PASSWORD }}"
