--- a/kubernetes/apps/database/moco/cluster/pvc.yaml
+++ b/kubernetes/apps/database/moco/cluster/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: moco
+  name: moco-backup
 spec:
   accessModes: ["ReadWriteOnce"]
   storageClassName: openebs-hostpath
