--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster17.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster17.yaml
@@ -45,7 +45,7 @@ spec:
       user: postgres
       dbname: postgres
     password:
-      name: postgres
+      name: cloudnative-pg-secret
       key: password
   # backup:
   #   retentionPolicy: 14d
