--- a/kubernetes/apps/default/jellyseerr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/externalsecret.yaml
@@ -12,6 +12,19 @@ spec:
     template:
       data:
         API_KEY: "{{ .JELLYSEERR_API_KEY }}"
+        DB_HOST: &dbHost postgres16-rw.database.svc.cluster.local
+        DB_PORT: "5432"
+        DB_USER: &dbUser "{{ .JELLYSEERR_POSTGRES_USER }}"
+        DB_PASS: &dbPass "{{ .JELLYSEERR_POSTGRES_PASSWORD }}"
+        DB_NAME: &dbName "jellyseerr"
+        DB_LOG_QUERIES: "false"
+        INIT_POSTGRES_DBNAME: *dbName
+        INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_USER: *dbUser
+        INIT_POSTGRES_PASS: *dbPass
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
+    - extract:
+        key: cloudnative-pg
     - extract:
         key: jellyseerr
