--- a/kubernetes/apps/default/jellyseerr/ks.yaml
+++ b/kubernetes/apps/default/jellyseerr/ks.yaml
@@ -15,8 +15,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
-    - name: volsync
-      namespace: volsync-system
+    - name: cloudnative-pg-cluster
+      namespace: database
   interval: 30m
   path: ./kubernetes/apps/default/jellyseerr/app
   postBuild:
