--- a/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
@@ -1,9 +1,10 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-lb
+  name: postgres16-lb
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: postgres.goyangi.cloud
+    external-dns.alpha.kubernetes.io/hostname: postgres16.goyangi.cloud
     lbipam.cilium.io/ips: 192.168.1.125
 spec:
   type: LoadBalancer
@@ -14,4 +15,22 @@ spec:
       targetPort: 5432
   selector:
     cnpg.io/cluster: postgres16
+    cnpg.io/instanceRole: primary
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres17-lb
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: postgres17.goyangi.cloud
+    lbipam.cilium.io/ips: 192.168.1.135
+spec:
+  type: LoadBalancer
+  ports:
+    - name: postgres
+      port: 5432
+      protocol: TCP
+      targetPort: 5432
+  selector:
+    cnpg.io/cluster: postgres17
     cnpg.io/instanceRole: primary
