--- a/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
@@ -42,8 +42,8 @@ spec:
               PGID: 1000
           init-db:
             image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16.6@sha256:a37bbb04a0ea3f15b505c6f97637e7ae89bc66541ae23b8d3848024087980e76
+              repository: ghcr.io/buroa/postgres-init
+              tag: 17
             envFrom: &envFrom
               - secretRef:
                   name: readarr-ab-secret
