--- a/kubernetes/apps/database/mysql/app/helmrelease.yaml
+++ b/kubernetes/apps/database/mysql/app/helmrelease.yaml
@@ -7,17 +7,24 @@ spec:
   chart:
     spec:
       chart: mysql-operator
-      version: 9.2.0-2.2.3
+      version: 2.2.3
       sourceRef:
         kind: HelmRepository
         name: mysql
         namespace: flux-system
   install:
+    crds: Create
     remediation:
       retries: 3
   upgrade:
+    crds: CreateReplace
     cleanupOnFail: true
     remediation:
       strategy: rollback
       retries: 3
+  values:
+    image:
+      pullPolicy: IfNotPresent
+    envs:
+      imagesPullPolicy: IfNotPresent
 
