--- a/kubernetes/apps/database/mysql/app/externalsecret.yaml
+++ b/kubernetes/apps/database/mysql/app/externalsecret.yaml
@@ -11,8 +11,8 @@ spec:
     name: mysql-secret
     template:
       data:
-        MINIO_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        MINIO_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        AWS_SECRET_KEY_ID: "{{ .MINIO_ROOT_USER }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
         rootUser: "{{ .MYSQL_SUPER_USER }}"
         rootHost: "%"
         rootPassword: "{{ .MYSQL_SUPER_PASS }}"
