--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -46,23 +46,14 @@ spec:
   timeout: 5m
   wait: false
   patches:
-    - # Add Sops decryption and postBuild substitutions to child Kustomizations
-      patch: |-
-        apiVersion: kustomize.toolkit.fluxcd.io/v1
-        kind: Kustomization
-        metadata:
-          name: not-used
-        spec:
-          decryption:
+    - # Add Sops decryption to child Kustomizations
+      patch: |
+        - op: add
+          path: /spec/decryption
+          value:
             provider: sops
             secretRef:
               name: sops-age
-          postBuild:
-            substituteFrom:
-              - name: cluster-settings
-                kind: ConfigMap
-              - name: cluster-secrets
-                kind: Secret
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
