--- a/kubernetes/apps/database/mariadb/ks.yaml
+++ b/kubernetes/apps/database/mariadb/ks.yaml
@@ -25,13 +25,16 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app mariadb
-  namespace: flux-system
+  namespace: &namespace database
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
-  path: ./kubernetes/apps/database/mariadb/operator
+  path: ./kubernetes/apps/database/mariadb/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -46,11 +49,14 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app mariadb-cluster
-  namespace: flux-system
+  namespace: &namespace database
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: mariadb
+      namespace: *namespace
   interval: 30m
   path: ./kubernetes/apps/database/mariadb/cluster
   prune: true
