--- a/kubernetes/apps/database/mariadb/cluster/cluster.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/cluster.yaml
@@ -13,7 +13,8 @@ spec:
   replicas: 1
   imagePullPolicy: IfNotPresent
   galera:
-    enabled: true
+    # TODO: use when 3 nodes
+    enabled: false
     config:
       reuseStorageVolume: true
   maxScale:
