--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -80,7 +80,7 @@ jobs:
   pre-pull-images:
     if: ${{ needs.compare-images.outputs.images != '[]' }}
     name: Pre-pull Images
-    runs-on: ["homelab-runner"]
+    runs-on: ["home-ops-runner"]
     needs: ["compare-images"]
     strategy:
       matrix:
