--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -4,7 +4,7 @@ tasks:
   ks-*:
     desc: Apply a Flux KS for a cluster [PATH=required]
     cmd: >
-      flux build --namespace flux-system ks {{base .PATH}} --kustomization-file {{.CLUSTER_DIR}}/apps/{{.PATH}}/ks.yaml --path {{.CLUSTER_DIR}}/apps/{{.PATH}}{{if contains .KUSTOMIZATION "not found"}} --dry-run{{end}} | yq 'with(select(.apiVersion == "kustomize.toolkit.fluxcd.io/v1" and .kind == "Kustomization"); .metadata.namespace = "flux-system")' - | kubectl {{.OPERATION}} {{if eq .OPERATION "apply"}}--server-side  --field-manager=kustomize-controller{{end}} --filename -
+      flux build --namespace flux-system ks {{base .PATH}} --kustomization-file {{.KUBERNETES_DIR}}/apps/{{.PATH}}/ks.yaml --path {{.KUBERNETES_DIR}}/apps/{{.PATH}}{{if contains .KUSTOMIZATION "not found"}} --dry-run{{end}} | yq 'with(select(.apiVersion == "kustomize.toolkit.fluxcd.io/v1" and .kind == "Kustomization"); .metadata.namespace = "flux-system")' - | kubectl {{.OPERATION}} {{if eq .OPERATION "apply"}}--server-side  --field-manager=kustomize-controller{{end}} --filename -
 
     requires:
       vars: [PATH]
@@ -13,7 +13,7 @@ tasks:
       KUSTOMIZATION:
         sh: flux --namespace flux-system get kustomizations {{base .PATH}}
     preconditions:
-      - test -f {{.CLUSTER_DIR}}/apps/{{.PATH}}/ks.yaml
+      - test -f {{.KUBERNETES_DIR}}/apps/{{.PATH}}/ks.yaml
       - which flux kubectl yq
   browse-pvc:
     desc: Mount a PVC to an temp container [NS=default] [CLAIM=required]
@@ -34,7 +34,7 @@ tasks:
         cmd: kubectl --namespace {{splitList "," .ITEM | first}} annotate externalsecret {{splitList "," .ITEM | last}} force-sync="{{now | unixEpoch}}" --overwrite
     vars:
       SECRETS:
-        sh: kubectl --kubeconfig {{.CLUSTER_DIR}}/kubeconfig get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
+        sh: kubectl --kubeconfig {{.KUBERNETES_DIR}}/kubeconfig get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
     preconditions:
       - which kubectl
   cleanse-pods:
