--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - ./headlamp.yaml
   - ./ingress-nginx.yaml
   - ./intel.yaml
+  - ./istio.yaml
   - ./jetstack.yaml
   - ./jupyterhub.yaml
   - ./kafka.yaml
