--- a/kubernetes/apps/ml-system/seldon-core/ks.yaml
+++ b/kubernetes/apps/ml-system/seldon-core/ks.yaml
@@ -9,6 +9,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
+    - name: istiod
+      namespace: istio-system
   interval: 30m
   path: ./kubernetes/apps/ml-system/seldon-core/app
   prune: false
