--- a/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSOWRD }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
         CATALOG_CATALOG__IMPL: org.apache.iceberg.jdbc.JdbcCatalog
         CATALOG_URI: "postgres://{{ .ICEBERG_POSTGRES_USER }}:{{ .ICEBERG_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/iceberg"
         CATALOG_S3_ENDPOINT: http://minio.default.svc.cluster.local:9000
